k8s/lib-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lib-deployment
  labels:
    app: lib
spec:
  selector:
    matchLabels:
      app: lib
  template:
    metadata:
      labels:
        app: lib
    spec:
      containers:
      - name: lib
        image: ghcr.io/remla23-team04/lib:0.0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: lib-service
spec:
  selector:
    app: lib
  ports:
  - port: 5000
    targetPort: 5000
