k8s/model-training-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-training-deployment
  labels:
    app: model-train
spec:
  selector:
    matchLabels:
      app: model-train
  template:
    metadata:
      labels:
        app: model-train
    spec:
      containers:
      - name: model-train
        image: ghcr.io/remla23-team04/model-training:0.0.1
        resources:
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: model-train-service
spec:

  selector:
    app: model-train
  ports:
  - port: 5000
    targetPort: 5000
